--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "Semi-automted referee interface for osu!",
   "main": "main.js",
   "scripts": {
-    "start": "powershell -Command \"[Console]::OutputEncoding = [System.Text.Encoding]::UTF8; npm run start-electron\"",
-    "start-electron": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "powershell -Command \"[Console]::OutputEncoding = [System.Text.Encoding]::UTF8; electron .\""
+    "start": "powershell -Command \"[Console]::OutputEncoding = [System.Text.Encoding]::UTF8; electron .\"",
+    "restart": "powershell -Command \"[Console]::OutputEncoding = [System.Text.Encoding]::UTF8; electron . -r\""
   },
   "repository": {
     "type": "git",
