修复转义字符无法读取问题 修复前人留下的残骸?(

--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "description": "Semi-automted referee interface for osu!",
   "main": "main.js",
   "scripts": {
-    "start": "powershell -Command \"[Console]::OutputEncoding = [System.Text.Encoding]::UTF8; electron .\"",
-    "restart": "powershell -Command \"[Console]::OutputEncoding = [System.Text.Encoding]::UTF8; electron . -r\""
+    "WinStart": "powershell -Command \"[Console]::OutputEncoding = [System.Text.Encoding]::UTF8; electron .\"",
+    "WinSestart": "powershell -Command \"[Console]::OutputEncoding = [System.Text.Encoding]::UTF8; electron . -r\"",
+    "start": "electron .\"",
+    "restart": "electron . -r\""
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cory2067/osu-autoref.git"
+    "url": "git+https://github.com/31415906/osu-qualifiers-autoref.git"
   },
   "author": "Cory Lynch",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cory2067/osu-autoref/issues"
+    "url": "https://github.com/31415906/osu-qualifiers-autoref/issues"
   },
-  "homepage": "https://github.com/cory2067/osu-autoref#readme",
+  "homepage": "https://github.com/31415906/osu-qualifiers-autoref#readme",
   "dependencies": {
     "bancho.js": "^0.11.6",
     "chalk": "^2.4.2",
