--- a/RestartSettings.json
+++ b/RestartSettings.json
@@ -1,7 +1,7 @@
 {
-  "RoomId": 119255336,
-  "MapIndex": 0,
-  "Round": 1,
+  "RoomId": 119258335,
+  "MapIndex": 1,
+  "Round": "1",
   "Ref": [
     "31415906"
   ],
